--- a/ts/package.json
+++ b/ts/package.json
@@ -8,13 +8,14 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.22.0",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "prettier": "^2.7.1",
-    "eslint": "^8.22.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "@typescript-eslint/eslint-plugin" : "^5.33.0"
+    "typescript": "^4.8.4"
   },
   "author": "Frédéric HEMERY",
   "license": "ISC"
