--- a/ts/package.json
+++ b/ts/package.json
@@ -11,7 +11,9 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.22.0",
+    "eslint-plugin-jsdoc": "^39.3.14",
     "jest": "^28.1.3",
+    "jsdoc": "^3.6.11",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
