--- a/ts/package.json
+++ b/ts/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "test:mutation": "stryker run"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "@stryker-mutator/core": "^6.2.3",
+    "@stryker-mutator/jest-runner": "^6.2.3",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.22.0",
