--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es5",
     "strict": true,
     "noImplicitAny": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "baseUrl": "./"
   },
   "include": ["src/**/*"],
